<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subject1"
            android:icon="@drawable/ic_menu_math"
            android:title="@string/menu_subject1" />
        <item
            android:id="@+id/nav_subject2"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_subject2" />
        <item
            android:id="@+id/nav_subject3"
            android:icon="@drawable/ic_menu_physics"
            android:title="@string/menu_subject3" />
        <item
            android:id="@+id/nav_subject4"
            android:icon="@drawable/ic_menu_chemistry"
            android:title="@string/menu_subject4" />
    </group>
</menu>
