<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.subject1.Subject1Fragment">

    <ToggleButton
        android:id="@+id/arithmetic_button"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textOn="@string/subject1_1"
        android:textOff="@string/subject1_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/geometry_button"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textOn="@string/subject1_2"
        android:textOff="@string/subject1_2"
        app:layout_constraintEnd_toStartOf="@+id/graphing_button"
        app:layout_constraintStart_toEndOf="@+id/arithmetic_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/graphing_button"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textOn="@string/subject1_3"
        android:textOff="@string/subject1_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>